--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,4 +1,17 @@
+@import "compass";
+@import "compass/reset";
+@import "compass/layout";
+
+@import "colors";
+@import "forms";
+@import "layout";
+@import "typography";
+
+@import "pages/devise_sessions";
+
 /*
+ * ALAS this doesn't work unless it is at the top of the file.  Leaving it here for posterity.
+ *
  * This is a manifest file that'll automatically include all the stylesheets available in this directory
  * and any sub-directories. You're free to add application-wide styles to this file and they'll appear at
  * the top of the compiled file, but it's generally better to create a new file per style scope.
