[authentication] style forms

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,10 +1,10 @@
-@import "compass";
 @import "compass/reset";
 @import "compass/layout";
 
 @import "colors";
 @import "forms";
 @import "layout";
+@import "form";
 @import "typography";
 
 @import "pages/devise_sessions";
