--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -4,7 +4,7 @@
 @import "colors";
 @import "forms";
 @import "layout";
-@import "form";
+@import "tables";
 @import "typography";
 
 @import "pages/devise_sessions";
